# ECScope Tests

# Placeholder test structure
# Tests will be added as modules are implemented

# Basic test framework setup (to be expanded)
# add_executable(ecscope_tests)
# target_sources(ecscope_tests PRIVATE
#     test_main.cpp
#     ecs/test_registry.cpp
#     memory/test_allocators.cpp
#     physics/test_collision.cpp
# )
# target_link_libraries(ecscope_tests PRIVATE ecscope)

message(STATUS "Test configuration placeholder - will be implemented with actual tests")